Change structure of frame tree in WINCE port. https://bugs.webkit.org/show_bug.cgi?id=121079

Patch by Zhuang Zhigang <zhuangzg@cn.fujitsu.com> on 2013-11-04
Reviewed by Darin Adler.

* WebCoreSupport/FrameLoaderClientWinCE.cpp:
(WebKit::FrameLoaderClientWinCE::createFrame):
* WebView.cpp:
(WebView::createFrame):
* WebView.h:

Canonical link: https://commits.webkit.org/141953@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@158616 268f45cc-cd09-0410-ab3c-d52691b4dbfc